Fix example on Linux

--- a/examples/opengl/CMakeLists.txt
+++ b/examples/opengl/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.16)
 project(opengl)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -16,6 +16,10 @@ target_include_directories(${PROJECT_NAME} PRIVATE ../../target)
 
 if (UNIX)
 	target_link_libraries(${PROJECT_NAME} PRIVATE libbrush.a)
+	if (NOT APPLE)
+		find_package(Threads REQUIRED)	
+		target_link_libraries(${PROJECT_NAME} PRIVATE -ldl ${CMAKE_THREAD_LIBS_INIT})
+	endif (NOT APPLE)
 else (UNIX)
 	target_link_libraries(${PROJECT_NAME} PRIVATE brush.lib)
 endif (UNIX)
