--- a/examples/opengl/CMakeLists.txt
+++ b/examples/opengl/CMakeLists.txt
@@ -10,9 +10,9 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(glm CONFIG REQUIRED)
 
-target_link_directories(${PROJECT_NAME} PRIVATE ../../target/release)
-target_link_directories(${PROJECT_NAME} PRIVATE ../../target/debug)
-target_include_directories(${PROJECT_NAME} PRIVATE ../../target)
+target_link_directories(${PROJECT_NAME} PRIVATE "../../target/release")
+target_link_directories(${PROJECT_NAME} PRIVATE "../../target/debug")
+target_include_directories(${PROJECT_NAME} PRIVATE "../../target")
 
 if (UNIX)
 	target_link_libraries(${PROJECT_NAME} PRIVATE libbrush.a)
@@ -20,8 +20,8 @@ if (UNIX)
 		find_package(Threads REQUIRED)	
 		target_link_libraries(${PROJECT_NAME} PRIVATE -ldl ${CMAKE_THREAD_LIBS_INIT})
 	endif (NOT APPLE)
-else (UNIX)
-	target_link_libraries(${PROJECT_NAME} PRIVATE brush.lib)
+else (UNIX) # WIN32
+	target_link_libraries(${PROJECT_NAME} PRIVATE brush.lib ws2_32.lib userenv.lib)
 endif (UNIX)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE OpenGL::GL glfw GLEW::GLEW)
