--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ Cargo.lock
 .vscode/
 .idea/
 build/
+.cache/
 
 # Created by https://www.toptal.com/developers/gitignore/api/rust,c++,c,windows,macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=rust,c++,c,windows,macos,linux
